# copilot_memory

./: .dockerignore  .gitignore  Dockerfile  README.md  install.sh  pyproject.toml
copilot_memory/: __init__.py  cli.py  config.py  db.py  editor_config.py  embedding.py  hook.py  ingest.py  models.py  search.py  server.py  storage.py
copilot_memory/templates/: CLAUDE.md  copilot-instructions.md
dotfiles/: CLAUDE.md  claude-settings-snippet.json  copilot-instructions.md  settings-snippet.json
tests/: conftest.py  test_cli.py  test_db.py  test_editor_config.py  test_hook.py  test_ingest.py  test_search.py  test_server.py  test_storage.py
